# sim

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  readme.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
bindings/: CMakeLists.txt
bindings/benchmarks/: bench_fft.py
bindings/python/sirius/: __init__.py
bindings/src/: bind_fft.cpp  bind_tiff_io.cpp  module.cpp
bindings/tests/: _helpers.py  test_fft.py  test_tiff_io.py
cmake/: Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalysis.cmake
include/sirius/: fft.hpp  fft_buffers.hpp  tiff_io.hpp
ports-overlay/nanobind/: portfile.cmake  vcpkg.json
src/: CMakeLists.txt  fft.cpp  tiff_io.cpp
tests/: CMakeLists.txt  test_fft1d.cpp  test_fft2d.cpp  test_fft3d.cpp  test_fft_buffers.cpp  test_tiff_io.cpp
