[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "sirius"
version = "0.0.1"
description = "SIRIUS - Structured Illumination Reconstruction and Image Utility Suite"
readme = "readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Velat Kilic", email = "velatkilic@berkeley.edu" },
]

[project.urls]
Homepage = "https://github.com/abcucberkeley/sirius"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
wheel.packages = []

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.args = ["-DSIRIUS_ENABLE_PYTHON_BINDINGS=ON"]

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run unittest to ensure that the package was correctly built
test-command = "python -m unittest discover -s {project}/bindings/tests"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"